# magick-mcp

./: Cargo.toml  LICENSE  README.md  sheepit.toml
.cursor/rules/: plan.mdc  rust.mdc
.github/workflows/: test.yml
src/: check.rs  cli.rs  feature.rs  install.rs  lib.rs  magick.rs  main.rs  mcp.rs  shell.rs  which.rs
src/feature/: check.rs  functions.rs  install.rs  magick.rs  shell.rs
src/feature/functions/: model.rs  path.rs  runner.rs  store.rs
src/mcp/: check.rs  check_tool.rs  func_execute_tool.rs  func_list_tool.rs  func_save_tool.rs  help_resource.rs  magick_tool.rs  server.rs
