[package]
name = "magick-mcp"
description = " A MCP server which facilitates usage of ImageMagick."
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/magick-mcp"

[dependencies]
clap = { version = "=4.5.26", features = ["derive"] }
which = "=7.0.1"
thiserror = "=2.0.9"
rmcp = { version = "=0.9.1", features = ["server", "macros", "transport-io"] }
tokio = { version = "=1.48.0", features = ["full"] }
serde_json = "=1.0.145"
serde = { version = "=1.0.228", features = ["derive"] }
dirs = "=6.0.0"

[dev-dependencies]
tempfile = "=3.23.0"
